# rbkairos_common

./: README.md
moveit/rbkairos_10_moveit_config/: .setup_assistant
moveit/rbkairos_5_oem_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_5_plus_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_franka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_iiwa_plus_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_oem_ur5_vgc10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_plus_ur5_vgc10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_ur10_vgc10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_ur5_egh_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_ur5_egh_plus_moveit/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbkairos_ur5_wsg50_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rbkairos_10_moveit_config/: CMakeLists.txt  package.xml
rbkairos_10_moveit_config/config/: controllers.yaml  controllers_simulation.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  rbkairos.srdf  ros_controllers.yaml
rbkairos_10_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  (+5 more)
rbkairos_a_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rbkairos_common/: CMakeLists.txt  package.xml
rbkairos_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbkairos_control/config/: gripper_control.yaml  ur10_calibration.yaml  ur10_controllers.yaml  ur10_params.yaml  ur16_calibration.yaml  ur5_calibration.yaml  ur5e_calibration.yaml  ur_controllers.yaml
rbkairos_control/config/ur/ur10/: joint_limits.yaml
rbkairos_control/config/ur/ur10e/: joint_limits.yaml
rbkairos_control/config/ur/ur16e/: joint_limits.yaml
rbkairos_control/config/ur/ur3/: joint_limits.yaml
rbkairos_control/config/ur/ur3e/: joint_limits.yaml
rbkairos_control/config/ur/ur5/: joint_limits.yaml
rbkairos_control/config/ur/ur5e/: joint_limits.yaml
rbkairos_control/launch/: rbkairos_control.launch
rbkairos_description/: CMakeLists.txt  package.xml
rbkairos_ur5_egh_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+333 files in other folders)
