<package>
  <name>rbkairos_common</name>
  <version>1.1.2</version>
  <description>URDF description of the RB Kairos, platform messages and other files for simulation.</description>


  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rbkairos_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbkairos_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbkairos_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <maintainer email="rguzman@robotnik.es">Carlos Villar</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rbkairos_description</run_depend>
  <run_depend>summit_xl_localization</run_depend>ddd
  <run_depend>summit_xl_navigation</run_depend>
  <run_depend>summit_xl_pad</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
